# whimsync

./: .env.example  .gitignore  .pre-commit-config.yaml  ErrorHandling.md  LICENSE  PROGRESS.md  README.md  WHIMSYNC.md  biome.json  docker-compose.yml  main.py  package.json  pyproject.toml
.agents/: AGENTS.md
.agents/skills/add_sqlite_table/: SKILL.md
.agents/skills/create_fastapi_endpoint/: SKILL.md
.agents/skills/whimsync-backend-patterns/: SKILL.md
.github/actions/setup-bun/: action.yml
.github/workflows/: ci.yml  lint.yaml  lint.yml  test.yaml  test.yml  typecheck.yaml  typecheck.yml
apps/api/: package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/__tests__/: domainRoutes.test.ts  domainServices.test.ts  memoryRoutes.test.ts  testUtils.ts
apps/api/src/config/: clerk.ts  cors.ts  redis.ts
apps/api/src/controllers/: memoryController.ts  orgController.ts  userController.ts
apps/api/src/lib/: apiResponse.ts  errors.ts  pgErrorMap.ts  queue.ts  validate.ts
apps/api/src/middleware/: authMiddleware.ts  clerkAuth.ts  errorHandler.ts
apps/api/src/routes/: memoryRoutes.ts  orgRoutes.ts  userRoutes.ts
apps/api/src/schemas/: memory.ts  org.ts  user.ts
apps/api/src/services/: memoryIngestService.ts  (+2 more)
apps/web/: .env.example  biome.json  next.config.ts  package.json
apps/worker/: package.json
apps/worker/src/: index.ts
src/shared/: db.py
src/whimsync/: __init__.py
src/whimsync/perception/: __init__.py  fast_path.py  lsh_novelty.py
src/whimsync/shared/: __init__.py  db.py
tests/: __init__.py  test_db.py  test_perception.py
(+15 files in other folders)
