[project]
name = "whimsync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "pydantic>=2.13.4",
    "redis>=8.0.1",
    "sqlite-vec>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
